benchmark: Remove warning except on travis